# AMATH600

./: .gitignore
LU_factorization/: CMakeLists.txt  functors_lu.cuh  lower.csv  lu_dense_cpu.cpp  lu_dense_gpu.cu  lu_dense_gpu_fancy.cu  qr_dense_cpu.cpp  qr_dense_cpu.h  qr_dense_gpu.cu  strided_iterator.cuh  strided_iterator.h  upper.csv  verify_lu.py
sparse_multiplication/: CMakeLists.txt  amath583IO.cpp  device_sparse_matrix.cuh  functors.cuh  get_test_matrices.sh  host_sparse_matrix.cuh  mm_io.hpp  setup_test_data.py  sparse_matrix.cuh  test_sparse_matrix.cu
sparse_multiplication/data/: jgl009.mtx  jgl009_id.mtx  jgl009_squared.mtx  rgg010_id.mtx
